public/stylesheets/scaffold.css
/* ... */
img.step_view {
	float: right;
	margin: 10px;
	margin-right: 0;
	margin-top: 0;
}


textarea {
  width:550px;
  height:100px;
}


span.step_number {
	display:inline;
	padding-left: 4px;
	padding-right: 4px;
	background-color: #000;
	color: #efefef;
}

span.edit_step_number {
	display:inline;
	padding-left: 4px;
	padding-right: 4px;
	background-color: #000;
	color: #efefef;
}






img.step_note {
	float: left;
	margin: 10px;
	margin-left: 0;
	margin-top: 0;
}

/* styling for profile page */
div.lab-book table {
	width: 100%;
}
div.lab-book h2 {
	margin:0;
	margin-bottom: 0.2em;

}
div.lab-book h2 a:link, div.lab-book h2 a:visited {
	display:inline;
	color:black;
	text-decoration:none;
	padding-right:30px;
	padding-bottom:2px;
	background-image:url(../images/arrow.png);
	background-repeat: no-repeat;
	background-position:right; 

}
div.lab-book h2 a:hover {
	background-color: #efefef;
	background-image:url(../images/arrow2.png);
}


div.lab-book td.date, div.lab-book td.right,.member td.role {
	text-align: right;
	font-style:italic;
	color: gray;
	font-family: georgia,serif;
}


.member td.role {
	text-align:left;
}
.member h1 {
}

div.member {
	position:relative;
}
.member div.experiment-status {
	height:0;
	top:0;
}



div.edit-experiment {
	display: none;
}







/*toolbar for switching between tabs on profile page*/

div#lab-book {
	display: none;
}


/* group profile page */

#request-list {
	height: 360px;
	border: 1px solid #ccc;
	background-color:#fff;
	padding:10px;
}

span#group-key {
	background-color: #fff;
	border: 1px solid #ccc;
	padding: 0.5em;
	font-family:monospace;
	width: 5em;
}

div#profile table tr td {
	vertical-align:top;
	padding-left: 1em;
}
div#profile table tr td.title {
	padding: 1px;
	font-weight:bold;	
}

/* messages on group page*/
div.message {
	padding-left:70px;
	position:relative;
	margin-left:30px;
}
div.message p {
	min-height:2em;
}
div.message h2 {
	background-color:#000;
	color:#fff;
	left:-30px;
	padding-bottom:10px;
	padding-top:10px;
	position:absolute;
	top:-14px;
	width:90px;
	text-align:center;
	height:36px;
}




/* styling for navigation bar */
div#navBar {
	position: fixed;
	margin-left:-520px;
	left: 50%;
	top: 0;
	height: 26px;
	width: 980px;
	padding-left: 30px;
	padding-right: 30px;
	color: white;
	background-color: black;
	background-image: none;
	z-index: 1;

}

#nav-print-to-pdf form { display:none; }
span#nav-print-to-pdf a#print-to-pdf { 
	display:block;
	height:26px;
	width:26px;
	background:#000 url(/images/pdf_logo.png) no-repeat center;
	padding:0;
	cursor:pointer;
 }




div#navBar input {
	font-size: 10px;
	margin-right: 5px;
	border: 1px solid gray;
	width: 133px;
	height: 13px;
	margin-top: 1px;
	margin-bottom: 1px;	
}
div#nav-right-corner{
	background-image: url(../images/rcorner.png);
	float: right;
	height: 26px;
	width: 26px;
	margin-right:-56px;
	background-color:transparent; 

}
div#nav-left-corner{
	background-image: url(../images/lcorner.png);
	float: left;
	height: 26px;
	width: 26px;
	margin-left:-56px;
	background-color:transparent;
}
div#btn-hide-nav {
	float:right;
	background-color: transparent;	
	margin-left: 0px;
}
div#btn-hide-nav a:link, div#btn-hide-nav a:visited {
	display:block;
	width:58px;
	height:19px;
	background-image: url(../images/slideUp.png);
}
div#btn-hide-nav a:hover {
	display:block;
	background-color:transparent;
	width:58px;
	height:19px;
	background-image: url(../images/slideUphover.png);
}
div#btn-hide-nav a.slid:link, div#btn-hide-nav a.slid:visited {
	display:block;
	width:58px;
	height:19px;
	background-image: url(../images/slideDown.png);
}
div#btn-hide-nav a.slid:hover {
	display:block;
	background-color:transparent;
	width:58px;
	height:19px;
	background-image: url(../images/slideDownhover.png);
}

div#navBar ul {
	background-color:black;
	color: white;
	background-image: none;
}
div#navBar ul li{
	float: right;
}
div#navBar ul span#user-nav li{
	float: left;
}
div#navBar ul {
	list-style-type: none;
	margin: 0;
	padding: 0;	
	overflow: hidden;
	height: 26px;
}

div#navBar ul li a {
	text-decoration: none;
	display: block;
	font-weight: normal;
	padding: 4px;
	color: #efefef;
	text-decoration: none;
	margin-right: 2px;
}

div#navBar ul li a:link, div#navBar ul li a:visited {
}
div#navBar ul li a:hover {
	color: white;
	/*font-weight: bold;*/
}
div#navBar ul li.selected a:link, div#navBar ul li .selected a:hover, div#navBar ul li.selected a:visited {
	font-weight: bold;
}

div#navBar ul li a#toggle-edit-steps {
	background-color:#efefef;
	color:#666;
	left:72px;
	margin-top:26px;
	position:absolute;
	-moz-border-radius:0 0 3px 3px;
}
div#navBar ul li a#toggle-edit-steps:hover {
	background-color:#ccc;
	color:#fff;
}
div#navBar ul li a#toggle-edit-steps.edit-on {
	background-color:#C7FFC4;
}

div#navBar ul li h2 {
	display: block;
	margin: 2px;
	font-size: 18px;
}
a#home-link:link, a#home-link:visited {
	height:20px;
	width:20px;
	padding-top:0;
	background: #000 url(../images/miniGenomikon.png) no-repeat center;
}
a#home-link:hover {
	background-image: url(../images/miniGenomikonHover.png);
}

/********* new user ********************/
div#user-form {
	background-color:#efefef;
	padding:30px;
	padding-top:15px;
	text-align: center;
	color:#666;
	margin: 0 150px;
	margin-top:30px;

}
div#user-form input.submit-btn {
	text-decoration:none;
	height:30px;
	line-height:30px;
	font-family: verdana,arial,helvetica,sans-serif;
	background-color:#666666;
	border:0 none;
	color:#FFFFFF;
	display:table;
	font-weight:bold;
	margin-left:auto;
	margin-right:auto;
	padding:5px 10px;
}
div#user-form input.submit-btn:hover {
	color:white;
	background-color:black;
}
div#user-form form {
	display:table;
	background-color:#efefef;
	margin-left:auto;
	margin-right:auto;
}
div#user-form p {
	background-color:#efefef;
	background-image:none;
}
div#user-form input {
	border: 1px solid #666;
}
div#user-form textarea {
	height:200px;
	width:350px;
}
/* ... */

